# yudaiV2

./: .gitignore  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  main.py  orchestrate_dbt.py  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: ci.yml
__tests__/: guardrails.test.js
app/: globals.css  layout.tsx  page.tsx
app/(dashboard-gen)/: page.tsx
app/api/conversation/: route.ts
app/components/: ChartCard.tsx  ChartSelector.tsx  ChatInput.tsx  CommandSuggestions.tsx  DataGraph.tsx  DataTable.tsx  Sidebar.tsx
app/context/: DatasetContext.tsx
app/datag/: page.tsx
app/test/: page.tsx
codegen/: main.py  pyproject.toml  test.py
codegen/agents/: base_eda.py  config.yml  data_exploration_agent.py  dataset_profiler_agent.py  guardrails.js  insight_gen_agent.py  manager.py  orchestrator.py  orchestrator_agent_sdk.py  prompt_template_orchestrator.py  tb_agent.py
codegen/api/: chat.py
codegen/app/: README.md  SUMMARY.md  base_eda.py  context_manager.py  demo_summary_agent.py  example_eda_output.json  llm_response.json  models.py  models.ts  prompt_template_orchestrator.py  requirements.txt  sample_data.csv  summary_agent_prompt_template.py
codegen/jinja/: api_template.py
codegen/scaffolder/: __init__.py
codegen/scaffolder/tests/: api_route_snapshot.ts  layout_snapshot.tsx  scatter_snapshot.tsx  test_templates.py
codegen/tests/: test_manager.py
models/: example_model.sql  schema.yml
tasksv1/templates/: ScatterChart.tsx.j2  _layout.tsx.j2
tests/: test_integration.py
~/.dbt/: profiles.yml
(+7 files in other folders)
