[project]
name = "codegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=22.0.0",
    "echarts-python>=0.1.3",
    "isort>=5.0.0",
    "jupyter>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pytest>=7.0.0",
    "scikit-learn>=1.0.0",
    "typing-extensions>=4.0.0",
]
