[project]
name = "codegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=22.0.0",
    "datamodel-code-generator>=0.28.4",
    "echarts-python>=0.1.3",
    "fastapi>=0.115.11",
    "isort>=5.0.0",
    "jupyter>=1.0.0",
    "numpy>=1.21.0",
    "openai>=1.66.3",
    "openpyxl>=3.1.0",
    "pandas>=1.5.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pytest>=7.0.0",
    "scikit-learn>=1.0.0",
    "torch>=2.7.0",
    "typing-extensions>=4.0.0",
    "ydata-profiling>=4.6.0",
]
